--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
   <string name="app_name" translatable="false">Stock Hawk</string>
   <string name="action_example">Example action</string>
+  <string name="details_name">Stock Details</string>
   <string name="action_change_units">Change Units</string>
   <string name="symbol_search">Symbol Search</string>
   <string name="content_test">Search for a Stock Symbol</string>
